[package]
name = "stage"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
pin-project = "1.0.12"
tokio = { version = "1.26.0", features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
    "parking_lot",
] }
tracing = "0.1.37"

[dev-dependencies]
tower = "0.4.13"
tracing-subscriber = "0.3.16"
