[package]
name = "tokio-stage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-backtrace = { version = "0.2.4", optional = true }
futures = "0.3.27"
pin-project = "1.0.12"
tower = { version = "0.4.13", features = ["full", "tokio", "util"] }
tracing = "0.1.37"
tokio = { version = "1.26.0", features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
    "parking_lot",
    "signal",
] }
tonic = "0.9.1"
cfg-if = "1.0.0"

[dev-dependencies]
tower = "0.4.13"
tracing-subscriber = "0.3.16"

[features]
default = []
backtrace = ["async-backtrace"]
stage3 = []
